<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="paolo.udacity.location_reminder.platform.views.common.views.LocationReminderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:contentDescription="@string/iv_close_content_description"
            android:onClick="@{_ -> viewModel.dismissMaintainReminder()}"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="@+id/tv_maintain_reminder_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_maintain_reminder_title"
            app:tint="@color/colorPrimary" />

        <TextView
            android:id="@+id/tv_maintain_reminder_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/s_tv_maintain_reminder_title_text"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_reminder_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/tl_hint_reminder_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_maintain_reminder_title"
            app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_reminder_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textUri"
                android:text="@={viewModel.editableReminder.title}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_reminder_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/tl_hint_reminder_description"
            app:layout_constraintTop_toBottomOf="@+id/tl_reminder_title"
            app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_reminder_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textUri"
                android:text="@={viewModel.editableReminder.description}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_reminder_radius_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/tl_hint_reminder_range_radius"
            app:layout_constraintTop_toBottomOf="@+id/tl_reminder_description"
            app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_reminder_radius_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textUri"
                android:text="@={viewModel.editableReminder.pointOfInterest.rangeRadiusAsString}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_reminder_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:enabled="false"
            android:hint="@string/tl_hint_chosen_location"
            app:layout_constraintTop_toBottomOf="@+id/tl_reminder_radius_distance"
            app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_reminder_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textUri"
                android:text="@{viewModel.editableReminder.pointOfInterest.locationAsString}"
                tools:text="-11.13134, -76.3225" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/acb_create"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="@{_ -> viewModel.createReminder()}"
            android:text="@string/b_title_create"
            android:visibility="@{viewModel.isBeingEdited ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toTopOf="@+id/acb_delete"
            app:layout_constraintTop_toBottomOf="@+id/tl_reminder_location" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/acb_delete"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{_ -> viewModel.deleteReminder()}"
            android:text="@string/b_title_delete"
            android:visibility="@{viewModel.isBeingEdited ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/acb_create"
            tools:layout_editor_absoluteX="8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
